# nf-gottcha

./: .gitignore  Dockerfile  README.md  main.nf  nextflow.config  pyproject.toml  refman.toml
